--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <p id="quote" class="quote">Click the button to get a random quote</p>
       <p id="quote-author"></p>
       <button id="generate-btn" class="btn">Generate Quote</button>
+      <button id="toggle-favorite-btn" class="btn">Add to favorites</button>
     </div>
+    ,<div class="favorites-container" id="favorites-container"></div>
     <script src="script.js" type="module"></script>
   </body>
 </html>
