--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div id="quote" class="quote"></div>
       <p id="quote-text" class="quote-text">Click the button to get a random quote</p>
       <p id="quote-author" class="quote-author"></p>
-      <button id="generate-btn" class="btn btn-primary">Generate Quote</button>
+      <button id="random-quote-btn" class="btn btn-primary">Get Random Quote</button>
       <i id="quote-favorite-btn" class="far fa-star star-icon"></i>
     </div>
     </div>
